# python-tristan

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.md  LICENCE  README.md  lgtm.yml  pyproject.toml  renovate.json  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.cfg  setup.py
.azure-pipelines/: azure-pipelines.yml  ci.yml
.github/workflows/: pre-commit-autoupdate.yml
docs/: api.rst  conf.py  diagnostics.rst  help.rst  index.rst  usage.rst
src/timepix/: make_vds.py
src/tristan/: __init__.py  binning.py  cues.py  data.py  images.py  make_single_image.py  make_vds.py  vds.py
src/tristan/blocks/: __init__.py  stage1.py
src/tristan/command_line/: __init__.py  apply_flat_field.py  cues.py  images.py  vds.py
src/tristan/diagnostics/: __init__.py  check_files.py  check_valid_events.py  diagnostics_log.py  find_trigger_intervals.py  utils.py
tests/: conftest.py  test_command_line.py  test_data.py  test_version.py
tests/diagnostics/: test_utils.py
timepix/: __init__.py  make_nxs.py  make_single_image.py  make_vds.py  time_histogram.py  time_histogram_20201016_mrw.py  timepix2M.py  tristan10M_stationary_data.py
timepix-module/: .modulerc  ben  bhw  gw  i19  junk  noemi  timepix.sh
timepix_daq/: NXSWriter.sh  correct_axes.py  makeNXS.py
timepix_daq/corrections/: correct_axes.py  get_info.py  make_new_NXS.py  modify_det_z.py  run_correction.sh  timepix_img_modifications.py
