[metadata]
name = tristan-dls
version = 0.1.1
description = Tools for processing event-mode X-ray data
long_description = file: README.md
long_description_content_type = text/markdown
author = Diamond Light Source — Data Analysis
author_email = scientificsoftware@diamond.ac.uk
license = MIT
license_file = LICENCE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    x-ray
    tristan
    timepix
project-urls =
    Documentation = https://tristan.readthedocs.io/
    GitHub = https://github.com/DiamondLightSource/python-tristan
    Bug-Tracker = https://github.com/DiamondLightSource/python-tristan/issues

[options]
include_package_data = True
install_requires =
    dask[array,diagnostics] != 2021.03.0
    h5py
    hdf5plugin
    nexgen >= 0.4.7
    numpy
    pint
    zarr
packages = find:
package_dir =
    =src
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cues = tristan.command_line.cues:main
    vds = tristan.command_line.vds:main
    images = tristan.command_line.images:main
