[metadata]
name = tristan
version = 0.1.16
description = Tools for processing event-mode X-ray data
long_description = file: README.md
long_description_content_type = text/markdown
author = Diamond Light Source — Data Analysis
author_email = scientificsoftware@diamond.ac.uk
license = MIT
license_file = LICENCE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    x-ray
    tristan
    timepix
project-urls =
    Documentation = https://tristan.readthedocs.io/
    GitHub = https://github.com/DiamondLightSource/python-tristan
    Bug-Tracker = https://github.com/DiamondLightSource/python-tristan/issues

[options]
include_package_data = True
install_requires =
    dask[array,diagnostics,distributed] != 2021.3.*
    h5py
    hdf5plugin
    nexgen >= 0.6.8
    numpy
    pandas
    pint
    zarr
packages = find:
package_dir =
    =src
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    apply-flat-field = tristan.command_line.apply_flat_field:main
    check-tristan-files = tristan.diagnostics.check_files:cli
    cues = tristan.command_line.cues:main
    find-trigger-intervals = tristan.diagnostics.find_trigger_intervals:cli
    images = tristan.command_line.images:main
    vds = tristan.command_line.vds:main
