[metadata]
name = tristan
version = 0.2.2
description = Tools for processing event-mode X-ray data
long_description = file: README.md
long_description_content_type = text/markdown
author = Diamond Light Source — Data Analysis
author_email = scientificsoftware@diamond.ac.uk
license = MIT
license_file = LICENCE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
keywords =
    x-ray
    tristan
    timepix
project-urls =
    Documentation = https://tristan.readthedocs.io/
    GitHub = https://github.com/DiamondLightSource/python-tristan
    Bug-Tracker = https://github.com/DiamondLightSource/python-tristan/issues

[options]
include_package_data = True
install_requires =
    dask[array,diagnostics,distributed]!=2021.3.*,<2023.4
    h5py>=3.8
    hdf5plugin>=4.0.1
    nexgen>=0.7.2
    numpy
    pandas
    pint
    zarr
packages = find:
package_dir =
    =src
python_requires = >=3.8
zip_safe = False

[options.extras_require]
dev = 
    black
    pytest-cov
    pytest-random-order
    pre-commit
    flake8
    build

[options.packages.find]
where = src

[isort]
profile=black
float_to_top=true

[flake8]
max-line-length = 88
extend-ignore = E203,E266,E402,E501,W503,E741

[options.entry_points]
console_scripts =
    apply-flat-field = tristan.command_line.apply_flat_field:main
    check-tristan-files = tristan.diagnostics.check_files:cli
    cues = tristan.command_line.cues:main
    find-trigger-intervals = tristan.diagnostics.find_trigger_intervals:cli
    images = tristan.command_line.images:main
    valid-events = tristan.diagnostics.check_valid_events:cli
    vds = tristan.command_line.vds:main
